--- a/src/Components/CardsList/styles.css
+++ b/src/Components/CardsList/styles.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
   display: flex;
   margin: 0 auto;
   justify-content: center;
-}
+} */
 
-@media only screen and (min-width: 768px) {
+/* @media only screen and (min-width: 768px) {
   .cards-list {
     display: flex;
     flex-direction: row;
@@ -14,4 +14,4 @@
   .App {
     margin-top: 100px;
   }
-}
+} */
